--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "type": "module",
   "scripts": {
     "build": "nuxt build",
+    "build:pages": "nuxt build --preset=cloudflare_pages",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "preview:pages": "pnpm build:pages && wrangler pages dev dist/",
+    "deploy:pages": "pnpm build:pages && wrangler pages deploy dist/"
   },
   "dependencies": {
     "@nuxt/eslint": "^0.5.0",
@@ -32,6 +35,7 @@
     "@nuxtjs/tailwindcss": "^6.12.1",
     "tailwindcss": "^3.4.9",
     "typescript": "^5.5.4",
-    "vue-tsc": "^2.0.29"
+    "vue-tsc": "^2.0.29",
+    "wrangler": "^3.71.0"
   }
 }
