--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "preview:pages": "pnpm build:pages && wrangler pages dev dist/",
-    "deploy:pages": "pnpm build:pages && wrangler pages deploy dist/"
+    "deploy:pages": "pnpm build:pages && wrangler pages deploy dist/",
+    "format": "prettier --write .",
+    "lint": "eslint --fix ."
   },
   "dependencies": {
     "@nuxt/eslint": "^0.5.0",
