--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@nuxt/eslint": "^0.5.0",
     "@nuxtjs/i18n": "^8.3.3",
+    "@pinia/nuxt": "^0.5.3",
     "@vee-validate/nuxt": "^4.13.2",
     "@vee-validate/zod": "^4.13.2",
     "@vueuse/core": "^10.11.1",
